--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,10 +68,11 @@
             android:weightSum="1">
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="wrap_content"
                 android:id="@+id/imgv_pick"
+                android:layout_weight="0.1"
                 android:background="@android:color/darker_gray"
-                android:layout_weight="0.1" />
+                />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
