--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,26 +12,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <EditText
-            android:id="@+id/etxt_fname"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="First Name"/>
-        <EditText
-            android:id="@+id/etxt_mname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Middle Name"/>
-        <EditText
-            android:id="@+id/etxt_lname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Last Name"/>
-        <Button
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/txt_fname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/txt_mname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/txt_lname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <!--<Button
             android:id="@+id/btn_send"
             android:text="Send"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" />-->
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -77,7 +79,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
@@ -116,5 +118,11 @@
                     android:src="@drawable/ic_camera_alt_black_24dp"/>
             </LinearLayout>
         </LinearLayout>
+        <ImageView
+            android:id="@+id/imgv_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:src="@drawable/ic_control_point_black_24dp"/>
     </LinearLayout>
 </LinearLayout>
