--- a/app/src/main/res/layout/activity_set_text.xml
+++ b/app/src/main/res/layout/activity_set_text.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SetTextActivity">
+    tools:context=".SetTextActivity"
+    android:orientation="vertical"
+    android:weightSum="1">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="1">
         <EditText
             android:id="@+id/etxt_fname"
             android:layout_width="match_parent"
@@ -25,5 +28,9 @@
             android:layout_height="wrap_content"
             android:hint="Last Name"/>
     </LinearLayout>
-
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btn_backpress"
+        android:text="BackPress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+</LinearLayout>
